--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ch.fhnw.imvs</groupId>
     <artifactId>hwgste-reader-parent</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
     <packaging>pom</packaging>
 
     <name>API and Reader for HWg-STE devices</name>
@@ -31,10 +31,12 @@
     </modules>
 
     <properties>
-        <slf4j.version>1.7.29</slf4j.version>
-        <log4j.version>1.2.17</log4j.version>
-        <junit4.version>4.12</junit4.version>
-        <mockito.version>3.2.0</mockito.version>
+        <slf4j.version>2.0.5</slf4j.version>
+        <junit5.version>5.9.1</junit5.version>
+        <mockito.version>4.10.0</mockito.version>
+        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        <jaxb2-maven-plugin.version>3.1.0</jaxb2-maven-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
